# gatha-transcribe

./: .clauderules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DATABASE_SETUP.md  Makefile  openapi.json
.beads/: issues.jsonl
.claude/: CLAUDE.md
.config/: nextest.toml
.sqlx/: query-096eb1d14d7ff332cc8ec4811baacfe20ac403b7e639c5e89e70fdf5ea093606.json  query-0b1745005b532349b9529d6bc3a243cdffdd3662bba669393d0e6f34617dc5bc.json  query-11c50cc682fef46d32bc663c08b31aa4c51b3583ea19afa5db0e40983e617a2c.json  query-1e3eb1ccb4dec3a612206239e6ff194be404d251eb0c0e6be47b56d25d7f6c05.json  query-3bc2f9eb6e755eae596eede0919d3482923184cc446e501e5782cc008b734145.json  query-4e6b2d5e9e6c69191b6ccfd97d52589546b5854e8896bb4d2523ed68c8758561.json  query-58172fc8f072f27ba4b57414c3f9062e97e6ee8a600ce5f24bc1164e2000a3e5.json  query-6901c343178f1ff4778cce4802f55d9f5d36631114c61b5f486c6d69852b3fc2.json  query-7c4a5f24f5e1db1828b5d7c3c8997f046469b70b045a09412e4d1f6d78b46c11.json  query-975867bdf93b9adaef17c90fc531dbe98ba407fa008b2077bb27166a60c4d9be.json  query-a3a80d0432accb33e66e875364135a8562ac44f2ded02246d1f8ac01e53c224e.json  query-b5eed3dadb9ec958534df0d8246d8ff0ce2687a333e37cbe5e3204207bcdf761.json  query-c97dd0567dc6cc01bb1a52c08dbe69aad106a8e75ebc9d44dc2257504fba6bd5.json  query-d6e7be6bdd4091b3daa6ffb3a4031864b0d6b935cadb7b30e5b02e332512e840.json  query-e10b9e5c4fdfd30d4eab4d0eba01c1d4c39c9169bb8bd701d734b4af575bcf65.json  query-e551a85440544691fc7476a3cad000221a2a61ac4785389cc68a295fe1e9d351.json  query-f5f3df744fd0b623392c7ce581dd3ee17817020d8b478fe37170928fb98d29e2.json  query-f6ba595fd6796ad228fff020d1b53fad2032f81a947c63e12cf20394f71b100c.json
frontend/: .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.test.json  vite.config.ts
migrations/: 20260110000000_create_videos_table.sql  20260110000001_create_users_table.sql  (+3 more)
playwright/: CLAUDE.md  (+5 more)
(+82 files in other folders)
