[package]
name = "gatha-transcribe"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "ws", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
ts-rs = "11.1.0"
utoipa = "5.4.0"
utoipa-axum = "0.2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
async-trait = "0.1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
tempfile = "3.14"

# Authentication & Security
bcrypt = "0.15"
jsonwebtoken = "9.2"
tower-cookies = "0.11"
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart", "stream", "json", "cookies"] }
tokio-test = "0.4"
tempfile = "3.14"
futures = "0.3"
